--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "next": "15.3.0",
+    "owl.carousel": "^2.3.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-multi-carousel": "^2.8.6",
+    "react-owl-carousel": "^2.3.3",
     "react-responsive": "^10.0.1",
     "react-select": "^5.10.1"
   }
